fix enroll popup on mobile

--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -16,10 +16,11 @@
     display: block;
     transition: all .3s;
 
-    @include respond(tab-port) {
+    @include respond(tab-land) {
       width: 100%;
-
     }
+
+    @include respond(tab-port)
 
     &:focus {
       outline: none;
