--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -12,7 +12,6 @@
 
   &__content {
     @include center-horizontal-vertical;
-
     width: 75%;
     background-color: $color-white;
     box-shadow: 0 2rem 4rem rgba($color-black, .2);
@@ -22,26 +21,57 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(.5);
     transition: all .4s .2s;
+
+    @media (max-width: 86em) { width: 100%; }
+
+    // @include respond(tab-port) {
+    //   display: block;
+    // }
   }
 
   &__left {
+    border: 2px solid purple;
     width: 33.3333333%;
     display: table-cell;
+
+    // @include respond(tab-port) {
+    //   display: table-row;
+    //   width: 100%;
+    // }
   }
 
   &__right {
-    width: 66.6666667%;
+    border: 2px solid orange;
+    width: 66.6666666%;
     display: table-cell;
     vertical-align: middle;
-    padding: 3rem 5rem;
+    padding: 3rem 3rem;
+
+    // @include respond(tab-port) {
+    //   display: table-row;
+    //   width: 100%;
+    //   padding: 1.5rem 3.5rem;
+    // }
   }
 
   &__img {
+    border: 2px solid green;
     display: block;
     width: 100%;
+
+    // @include respond(tab-port) {
+    //   display: inline-block;
+    //   width: 50%;
+    //   height: 30rem;
+    // }
+    //
+    // @include respond(phone) {
+    //   display: none;
+    // }
   }
 
   &__text {
+    border: 2px solid teal;
     font-size: 1.4rem;
     margin-bottom: 4rem;
 
@@ -57,6 +87,10 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+
+    // @include respond(tab-port) {
+    //   margin-bottom: 2.5rem;
+    // }
   }
 
   &:target {
@@ -67,6 +101,7 @@
   &:target &__content {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
+    }
   }
 
   &__close {
